tests/ui/const-generics/mgca/macro-const-arg-infer.stderr
error[E0392]: type parameter `T` is never used
  --> $DIR/macro-const-arg-infer.rs:10:10
   |
LL | struct A<T>;
   |          ^ unused type parameter
   |
   = help: consider removing `T`, referring to it in a field, or using a marker such as `PhantomData`
   = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead

error[E0308]: mismatched types
  --> $DIR/macro-const-arg-infer.rs:18:5
   |
LL |   const y: A<
   |  __________-
LL | |     {
LL | |         y! {
LL | |             x
LL | |         }
LL | |     },
LL | | > = 1;
   | | -   ^ expected `A<_>`, found integer
   | |_|
   |   expected because of the type of the constant
   |
   = note: expected struct `A<_>`
                found type `{integer}`

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/macro-const-arg-infer.rs:6:9
   |
LL |           _
   |           ^ not allowed in type signatures
...
LL | /         y! {
LL | |             x
LL | |         }
   | |_________- in this macro invocation
   |
   = note: this error originates in the macro `y` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0121, E0308, E0392.
For more information about an error, try `rustc --explain E0121`.
